fixing spacing

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@
 .content-object-enter-active {
     width: 18rem;
     opacity: 1;
-    transition: all 200ms cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition: all 120ms cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
 .content-object-exit {
@@ -54,9 +54,8 @@
 .content-object-exit-active {
     width: 0;
     opacity: 0;
-    transition: all 200ms cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition: all 120ms cubic-bezier(0.25, 0.1, 0.25, 1);
 }
-
 
 body {
     margin: 0;
